--- a/src/main/webapp/frontend/commodityDetails/OrderDetail.html
+++ b/src/main/webapp/frontend/commodityDetails/OrderDetail.html
@@ -121,9 +121,9 @@
                     </button>
                     <div class="row gap-2 mx-auto justify-content-md-end"
                          v-if="orders.ORDER_STATUS === '0'">
-                        <!--                        <button class="col-md-2 float-right btn btn-outline-danger"-->
-                        <!--                                @click="cancelOrder(orders, index)">取消訂單-->
-                        <!--                        </button>-->
+                        <button class="col-md-2 float-right btn btn-outline-danger"
+                                @click="repay(orders, index)">繼續完成付款
+                        </button>
                     </div>
                     <div class="row gap-2 mx-auto justify-content-md-end"
                          v-else-if="orders.ORDER_STATUS === '3'">
@@ -163,7 +163,7 @@
                             <h5 class="modal-title">商品詳情</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-
+                        <div id="orderForm"></div>
                         <div class="modal-body">
 
                             <table class="container media align-items-lg-center flex-column flex-lg-row p-3">
@@ -301,7 +301,7 @@
                         return '退/換貨申請中'
                     case '8':
                         return '退/換貨處理中'
-                    default:
+                    case '9':
                         return '訂單已取消'
                 }
             },
@@ -318,8 +318,18 @@
                         console.log(err);
                     })
             },
-            cancelOrder: function (orders, index) {
-
+            repay: function (orders, index) {
+                var qs = Qs
+                axios.post('/CGA104G1/UpdateOrderServlet', qs.stringify({
+                    orderId: this.orders[index].ORDER_ID, action: 'repay'
+                }))
+                    .then(res => {
+                        console.log(res);
+                        $("#orderForm").html(res.data)
+                    })
+                    .catch(err => {
+                        console.log(err);
+                    })
             },
             returnOrder: async function (orders, index) {
                 const {value: formValues} = await Swal.fire({
@@ -421,7 +431,6 @@
     vm.mount('#app')
 
 </script>
-
 
 
 </body>
