--- a/src/main/webapp/frontend/groupBuy/listallgroupbuy.html
+++ b/src/main/webapp/frontend/groupBuy/listallgroupbuy.html
@@ -308,7 +308,6 @@ let jsonUrl = "/CGA104G1/GroupBuyGetAllJSONServlet";
         hasNext: currentPage < pageTotal,
       }
       displayData(data);
-      pageBtn(page);
     }
 
     function displayData(data) {
@@ -341,7 +340,7 @@ let jsonUrl = "/CGA104G1/GroupBuyGetAllJSONServlet";
 								<!--End Brand Name-->
 								</div>
 								<div class="product-price">
-									<span class="old-price">原價$${groupBuy.gbitem_price}</span><span class="price">團購價$${groupBuy.gbitem_price}</span>
+									<span class="old-price">原價$${groupBuy.gbitem_price}</span><span class="price">團購價$${groupBuy.gb_price}</span>
 								</div>
 							</div>
 								<!--End Product Review-->
@@ -360,47 +359,6 @@ let jsonUrl = "/CGA104G1/GroupBuyGetAllJSONServlet";
 
 
     }
-
-
-
-
-    function pageBtn(page) {
-      let str = '';
-      const total = page.pageTotal;
-
-      if (page.hasPage) {
-        str += `<li class="page-item"><a class="page-link" href="#" data-page="${Number(page.currentPage) - 1}">Previous</a></li>`;
-      } else {
-        str += `<li class="page-item disabled"><span class="page-link">Previous</span></li>`;
-      }
-
-
-      for (let i = 1; i <= total; i++) {
-        if (Number(page.currentPage) === i) {
-          str += `<li class="page-item active"><a class="page-link" href="#" data-page="${i}">${i}</a></li>`;
-        } else {
-          str += `<li class="page-item"><a class="page-link" href="#" data-page="${i}">${i}</a></li>`;
-        }
-      };
-
-      if (page.hasNext) {
-        str += `<li class="page-item"><a class="page-link" href="#" data-page="${Number(page.currentPage) + 1}">Next</a></li>`;
-      } else {
-        str += `<li class="page-item disabled"><span class="page-link">Next</span></li>`;
-      }
-
-      pageid.innerHTML = str;
-    }
-
-    function switchPage(e) {
-      e.preventDefault();
-      if (e.target.nodeName !== 'A') return;
-      const page = e.target.dataset.page;
-      pagination(GroupBuyVOs, page);
-    }
-
-    pageid.addEventListener('click', switchPage);
-
 };
 
 //時間倒數
