--- a/src/main/webapp/frontend/index.html
+++ b/src/main/webapp/frontend/index.html
@@ -26,6 +26,104 @@
     <link rel="stylesheet" type="text/css" href="../resources/static/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="../resources/static/css/home.css"/>
     <style>
+        .parent {
+            background: gray;
+            width: 100%;
+            height: 600px;
+            margin-bottom: 50px;
+            text-align: center;
+        }
+
+        .child {
+            width: 300px;
+            height: 10px;
+        }
+
+
+        .center {
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+
+        .button {
+
+            --offset: 10px;
+            --border-size: 2px;
+            display: block;
+            position: relative;
+            padding: 1.5em 3em;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            border: 0;
+            background: transparent;
+            color: #e55743;
+            text-transform: uppercase;
+            letter-spacing: 0.25em;
+            outline: none;
+            cursor: pointer;
+            font-weight: bold;
+            border-radius: 0;
+            box-shadow: inset 0 0 0 var(--border-size) currentcolor;
+            transition: background 0.8s ease;
+        }
+
+        .button:hover {
+            background: rgba(100, 0, 0, 0.03);
+        }
+
+        .button__horizontal, .button__vertical {
+            position: absolute;
+            top: var(--horizontal-offset, 0);
+            right: var(--vertical-offset, 0);
+            bottom: var(--horizontal-offset, 0);
+            left: var(--vertical-offset, 0);
+            transition: transform 0.8s ease;
+            will-change: transform;
+        }
+
+        .button__horizontal::before, .button__vertical::before {
+            content: "";
+            position: absolute;
+            border: inherit;
+        }
+
+        .button__horizontal {
+            --vertical-offset: calc(var(--offset) * -1);
+            border-top: var(--border-size) solid currentcolor;
+            border-bottom: var(--border-size) solid currentcolor;
+        }
+
+        .button__horizontal::before {
+            top: calc(var(--vertical-offset) - var(--border-size));
+            bottom: calc(var(--vertical-offset) - var(--border-size));
+            left: calc(var(--vertical-offset) * -1);
+            right: calc(var(--vertical-offset) * -1);
+        }
+
+        .button:hover .button__horizontal {
+            transform: scaleX(0);
+        }
+
+        .button__vertical {
+            --horizontal-offset: calc(var(--offset) * -1);
+            border-left: var(--border-size) solid currentcolor;
+            border-right: var(--border-size) solid currentcolor;
+        }
+
+        .button__vertical::before {
+            top: calc(var(--horizontal-offset) * -1);
+            bottom: calc(var(--horizontal-offset) * -1);
+            left: calc(var(--horizontal-offset) - var(--border-size));
+            right: calc(var(--horizontal-offset) - var(--border-size));
+        }
+
+        .button:hover .button__vertical {
+            transform: scaleY(0);
+        }
 
         #memberImg img {
             max-width: 60px !important;
@@ -113,16 +211,73 @@
             }
         }
 
+        div.mobile {
+            display: none;
+        }
 
+        @media (max-width: 1024px) {
+            div.desktop {
+                display: none;
+            }
+
+            div.mobile {
+                display: block;
+                z-index: 1001;
+            }
+        }
+        a {
+            text-decoration: none;
+        }
     </style>
 
 </head>
 
-<body>
+<div class="mobile" style="max-width: 1000px;">
+
+    <img src="../resources/static/image/pexels-wojciech-kumpicki-2071873.jpg"
+         style="max-width: 100%;background-size: cover;-moz-background-size: cover;position: absolute">
+
+    <div class="parent">
+        <div class="child center row" style="font-size: 20px">
+            <a class="button col-md-4"
+               href="/CGA104G1/frontend/item/shop.html"
+               style="color: #95ce7e; background-color: rgba(245,245,245,0.5)">
+                前往商城
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </a>
+            <button class="button col-md-4" style="visibility: hidden">
+                前往商城
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </button>
+            <a class="button col-md-4"
+                href="/CGA104G1/frontend/groupBuy/listallgroupbuy.html"
+               style="background-color: rgba(245,245,245,0.5)">
+                前往團購
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </a>
+            <button class="button col-md-4" style="visibility: hidden">
+                前往商城
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </button>
+            <a class="button col-md-4"
+                    href="/CGA104G1/frontend/article/select_page.jsp"
+                    style="color: #407bff; background-color: rgba(245,245,245,0.5);">
+                前往討論區
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </a>
+        </div>
+    </div>
+
+</div>
 
 
 <!-- 首頁內容開始 -->
-<div class="skw-pages">
+<div class="skw-pages desktop">
     <div class="skw-page skw-page-1 active">
         <div class="skw-page__half skw-page__half--left">
             <div class="skw-page__skewed">
